[package]
name = "config"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-macro = { path = "config-macro" }

[target.'cfg(windows)'.dependencies.windows-sys]
cersion = "0.32"
features = ["Win32_UI_Shell", "Win32_Globalization", "Win32_System_Com", "Win32_Foundation"]

[target.'cfg(target_os = "macos")'.dependencies.objc]
version = "0.2.7"